# bnt-python-setup

./: .gitignore  README.md  git_ignore.ini~
scripts/: create_python_project.sh  create_python_project.sh~
templates/: .gitignore  LICENSE  README.md  coverage.ini  pytest.ini  setup.cfg  setup.py
templates/sphinx/: extras_for_conf.py  extras_for_conf.py~  index.rst
templates/src/: __init__.py  __main__.py  sample.py  sample.py~
templates/tests/: test_sample.py
tests/: pytest.ini  pytest.ini~
