[metadata]
name = replaceWithPackageName
version = replaceWithVersionNumber
author = replaceWithAuthorName
author_email = replaceWithEmail
description = A python package
long_description = file: README.md
url = replaceWithRepository
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
include=# patterns, to, match
exclude=# patterns, to, match

[build_sphinx]
project = replaceWithPackageName
version = replaceWithVersionNumber
release = replaceWithVersionNumber
source-dir = sphinx/source
